--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -52,6 +52,11 @@
     color: var(--title-color-dark);
 }
 
+/* Change Background Header */
+.scroll-header {
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+}
+
 /* Break point */
 @media screen and (max-width: 768px) {
     .header {
