--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,32 +1,87 @@
 .skills__container {
-    grid-template-columns: repeat(6, 1fr);
-    column-gap: 1.5rem;
+  grid-template-columns: repeat(7, 1fr);
+  column-gap: 1.5rem;
 }
 
-.skill__section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 120px;
-    width: 120px;
-    border: 1px solid rgb(236, 231, 231);
-    border-radius: 8px;
+.skill__box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 6px;
+  height: 120px;
+  width: 120px;
+  border: 1px solid rgb(236, 231, 231);
+  border-radius: 8px;
+  transition: 0.3s;
+}
+
+.skill__box:hover {
+  transform: translateX(0.5rem);
+  scale: 1.03;
+  box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
 }
 
 .skill__img {
-width: 50px;
-height: 50px;
+  width: 50px;
+  height: 50px;
 }
-
-/* .skill__img img {
- 
-} */
 
 .skill__description {
-    margin-top: 6px;
- font-size: 14px;
- font-weight: normal;
+  margin-top: 6px;
+  font-size: 14px;
+  font-weight: normal;
 }
 
-/* TODO: ADD ANIMATION AND RESPONSIVE */
+/* RESPONSIVE */
+@media screen and (max-width: 992px) {
+  .skills__container {
+    grid-template-columns: repeat(6, 1fr);
+    column-gap: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .skills__container {
+    grid-template-columns: repeat(5, 1fr);
+    column-gap: 1rem;
+  }
+  .skill__box {
+    height: 100px;
+    width: 100px;
+  }
+  .skill__img {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .skills__container {
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1rem;
+  }
+  .skill__box {
+    height: 100px;
+    width: 100px;
+  }
+  .skill__img {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .skills__container {
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 0.75rem;
+  }
+  .skill__box {
+    height: 80px;
+    width: 80px;
+  }
+  .skill__img {
+    width: 35px;
+    height: 35px;
+  }
+}
