--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -42,3 +42,21 @@
     padding: 1.25rem 1.5rem;
  }
 }
+
+@media screen and (max-width: 768px) {
+    .testimonial__container {
+        width: 720px;
+    }
+  }
+
+  @media screen and (max-width: 576px) {
+    .testimonial__container {
+        width: 400px;
+    }
+  }
+  
+  @media screen and (max-width: 350px) {
+    .testimonial__container {
+        width: 340px;
+    }
+  }
