--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -17,12 +17,12 @@
 }
 
 .home__social-icon {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     color: var(--title-color);
 }
 
 .home__social-icon:hover{
-    color: rgb(39, 39, 39);
+    color: var(--title-color-dark);
 }
 
 .home__title {
