--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -26,6 +26,8 @@
 }
 
 .home__title {
+    display: flex;
+    align-items: center;
     font-size: var(--big-font-size);
     margin-bottom: var(--mb-0-25);
 }
@@ -167,6 +169,21 @@
     display: none;
    }
   }
+
+  @media screen and (max-width: 768px) {
+    .home__container {
+        margin-top: -1.5rem;
+        padding-right: 2.8rem;
+    }
+    .home__description {
+        width: fit-content;
+    }
+    .home__hand {
+        width: 24px;
+        height: 24px;
+       }
+  }
+  
   @media screen and (max-width: 350px) {
    .home__hand {
     width: 22px;
