--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -138,8 +138,19 @@
         margin: 0 auto;
     }
   }
+
+  @media screen and (max-width: 576px) {
+    .contact__container {
+        grid-template-columns: 1fr;
+        padding-right: 2.8rem;
+    }
+  }
   
   @media screen and (max-width: 350px) {
+    .contact__container {
+        grid-template-columns: 1fr;
+        padding-right: 2.8rem;
+    }
    .contact__info {
     grid-template-columns: 1fr;
    }
