--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -69,9 +69,13 @@
   }
   
   @media screen and (max-width: 768px) {
-    
+    .footer__container {
+        padding-right: 2.8rem;
+    }
   }
   
   @media screen and (max-width: 350px) {
-    
+    .footer__container {
+        padding-right: 2.8rem;
+    }
   }
