--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -162,6 +162,7 @@
 @media screen and (max-width: 768px) {
   .portfolio__container {
     grid-template-columns: repeat(2, 1fr);
+    padding-right: 2.8rem;
   }
 
   .portfolio__title {
