--- a/src/components/Qualification/Qualification.css
+++ b/src/components/Qualification/Qualification.css
@@ -82,8 +82,7 @@
   
   @media screen and (max-width: 576px) {
     .qualification__container {
-        padding-left: 1.4rem;
-        padding-right: .25rem;
+        padding-right: 2.8rem;
         grid-template-columns: repeat(1, 1fr);
     }
     .qualification__icon {
