--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -58,15 +58,17 @@
 @media screen and (max-width: 576px) {
   .skills__container {
     grid-template-columns: repeat(3, 1fr);
-    column-gap: 1rem;
+    gap: 0.5rem;
+    padding-right: 2.8rem;
   }
   .skill__box {
-    height: 100px;
-    width: 100px;
+    height: 90px;
+    width: 90px;
+    margin: 0;
   }
   .skill__img {
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
   }
 }
 
