--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -51,7 +51,8 @@
 
   @media screen and (max-width: 576px) {
     .testimonial__container {
-        width: 400px;
+        margin-left: 0;
+        width: 350px;
     }
   }
   
