--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -121,6 +121,13 @@
     }
 }
 
+@media screen and (max-width: 576px) {
+    .nav {
+        justify-content: space-between;
+        padding-left: 1.5rem;
+    }
+}
+
 @media screen and (max-width: 350px) {
     .nav__menu {
         padding: 2rem 0.25rem 4rem;
