--- a/src/components/Qualification/Qualification.css
+++ b/src/components/Qualification/Qualification.css
@@ -82,8 +82,8 @@
   
   @media screen and (max-width: 576px) {
     .qualification__container {
-        padding-right: 2.8rem;
         grid-template-columns: repeat(1, 1fr);
+        padding-left: 2rem;
     }
     .qualification__icon {
         padding: 6px;
