--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -54,7 +54,7 @@
         width: 320px;
     }
     .testimonial__card {
-        padding: 1.5rem 0;
+        padding: 1.5rem .5rem 1.5rem 1rem;
     }
   }
   
