resume update and about image change

--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -17,8 +17,8 @@
 }
 
 .skill__box:hover {
-  transform: translateX(0.5rem);
-  scale: 1.03;
+  /* transform: translateX(0.25rem); */
+  scale: 1.04;
   box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
 }
 
