--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -56,7 +56,7 @@
 }
 
 .home__img {
-    background: url(../../../src/assets/profile2.png);
+    background: url(../../../src/assets/profile.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
