--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -34,9 +34,10 @@
 }
 
 /* Responsive */
-@media screen and (min-width: 992px) {
+@media screen and (max-width: 992px) {
  .testimonial__container {
     width: initial;
+    width: 800px;
  }   
  .testimonial__card {
     padding: 1.25rem 1.5rem;
@@ -45,7 +46,10 @@
 
 @media screen and (max-width: 768px) {
     .testimonial__container {
-        width: 720px;
+        width: 640px;
+    }
+    .testimonial__card {
+        padding: 1.2rem 1.5rem; 
     }
   }
 
