--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -146,6 +146,9 @@
   }
   
   @media screen and (max-width: 768px) {
+    .home__container {
+        padding-left: 1.5rem;
+    }
     .home__title {
         font-size: 2.5rem;
     }
