--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -44,7 +44,8 @@
 
 @media screen and (max-width: 768px) {
   .skills__container {
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    margin: 0 auto;
   }
   .skill__box {
     height: 100px;
