navbar dark an light mode some issue solve

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,7 +4,14 @@
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
-    background-color: var(--body-color);
+}
+
+.bg-color {
+   background-color: var(--body-color);
+}
+
+.text-dark-color {
+    color: var(--title-color);
 }
 
 .nav {
@@ -22,7 +29,6 @@
 
 .nav__logo,
 .nav__toggle {
-    color: var(--title-color);
     font-weight: var(--font-medium);
 }
 
@@ -36,7 +42,6 @@
    flex-direction: column;
    align-items: center;
    font-size: var(--small-font-size);
-   color: var(--title-color);
    font-weight: var(--font-medium);
    transition: .3s;
 }
@@ -85,7 +90,7 @@
         bottom: -100%;
         left: 0;
         width: 100%;
-        background-color: var(--body-color);
+        
         padding: 2rem 1.5rem 4rem;
         box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
         border-radius: 1.5rem 1.5rem 0 0;
@@ -111,7 +116,6 @@
         bottom: .5rem;
         font-size: 1.5rem;
         cursor: pointer;
-        color: var(--title-color);
     }
     .nav__close:hover {
         color: var(--title-color-dark);
