--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -18,6 +18,9 @@
 
 .home__social-icon {
     font-size: 1.5rem;
+    
+}
+.text__color {
     color: var(--title-color);
 }
 
@@ -99,7 +102,6 @@
 }
 
 .home__scroll-name {
-    color: var(--title-color);
     font-weight: var(--font-medium);
     margin-right: var(--mb-0-25);
     margin-left: 2px;
@@ -107,7 +109,6 @@
 
 .home__scroll-arrow {
     font-size: 1.25rem;
-    color: var(--title-color);
     margin-top: 6px;
     margin-left: 4px;
 }
