--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -3,11 +3,14 @@
 }
 
 .testimonial__card {
-    background-color: var(--container-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 1.5rem 2rem;
     border-radius: 1.5rem;
     margin-bottom: var(--mb-3);
+}
+
+.bg-color {
+    background-color: var(--container-color); 
 }
 
 .testimonial__img {
